@@ -9,12 +9,16 @@ import static seedu.smartnus.logic.commands.CommandUtil.QUESTION_KEYWORD;
 import static seedu.smartnus.testutil.Assert.assertThrows;
 import static seedu.smartnus.testutil.TypicalQuestions.FIONA;
 import static seedu.smartnus.testutil.TypicalSmartNus.getTypicalSmartNus;
+import static seedu.smartnus.model.util.SampleDataUtil.MCQ_QUESTION_INDEX;
+import static seedu.smartnus.model.util.SampleDataUtil.TFQ_QUESTION_INDEX;
+import static seedu.smartnus.model.util.SampleDataUtil.getSampleQuestions;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.List;
 import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
@@ -29,9 +33,13 @@ import seedu.smartnus.model.ModelManager;
 import seedu.smartnus.model.ReadOnlySmartNus;
 import seedu.smartnus.model.ReadOnlyUserPrefs;
 import seedu.smartnus.model.UserPrefs;
+import seedu.smartnus.model.question.Importance;
 import seedu.smartnus.model.note.Note;
 import seedu.smartnus.model.question.Question;
+import seedu.smartnus.model.question.predicates.HasImportancePredicate;
 import seedu.smartnus.model.question.predicates.NameContainsKeywordsPredicate;
+import seedu.smartnus.model.question.predicates.TagsContainKeywordsPredicate;
+import seedu.smartnus.model.util.SampleDataUtil;
 import seedu.smartnus.model.statistic.TagStatistic;
 import seedu.smartnus.ui.panel.StatisticListPanel;
 
@@ -39,22 +47,28 @@ import seedu.smartnus.ui.panel.StatisticListPanel;
  * Contains integration tests (interaction with the Model) for {@code FindCommand}.
  */
 public class FindCommandTest {
-    private Model model = new ModelManager(getTypicalSmartNus(), new UserPrefs());
-    private Model expectedModel = new ModelManager(getTypicalSmartNus(), new UserPrefs());
+    private Model model = new ModelManager(SampleDataUtil.getSampleSmartNus(), new UserPrefs());
+    private Model expectedModel = new ModelManager(SampleDataUtil.getSampleSmartNus(), new UserPrefs());
 
     @Test
     public void equals() {
+        // TODO: add tags and importance predicates
         NameContainsKeywordsPredicate firstNamePredicate =
                 new NameContainsKeywordsPredicate(Collections.singletonList("first"));
         NameContainsKeywordsPredicate secondNamePredicate =
                 new NameContainsKeywordsPredicate(Collections.singletonList("second"));
+        TagsContainKeywordsPredicate firstTagPredicate =
+                new TagsContainKeywordsPredicate(Collections.singletonList("first"));
+        TagsContainKeywordsPredicate secondTagPredicate =
+                new TagsContainKeywordsPredicate(List.of("first", "second"));
+        HasImportancePredicate firstImportancePredicate =
+                new HasImportancePredicate(new Importance("1"));
+        HasImportancePredicate secondImportancePredicate =
+                new HasImportancePredicate(new Importance("2"));
 
         ArrayList<Predicate<Question>> firstPredicateArr = new ArrayList<>();
-        firstPredicateArr.add(firstNamePredicate);
-        ArrayList<Predicate<Question>> secondPredicateArr = new ArrayList<>();
-        secondPredicateArr.add(secondNamePredicate);
+        firstPredicateArr.addAll(List.of(firstNamePredicate, firstTagPredicate, firstImportancePredicate));
         FindCommand findFirstCommand = new FindCommand(firstPredicateArr);
-        FindCommand findSecondCommand = new FindCommand(secondPredicateArr);
 
         // same object -> returns true
         assertTrue(findFirstCommand.equals(findFirstCommand));
@@ -69,49 +83,95 @@ public class FindCommandTest {
         // null -> returns false
         assertFalse(findFirstCommand.equals(null));
 
-        // different question -> returns false
-        assertFalse(findFirstCommand.equals(findSecondCommand));
-    }
+        // different name predicate -> returns false
+        ArrayList<Predicate<Question>> differentArr = new ArrayList<>();
+        differentArr.addAll(List.of(secondNamePredicate, firstTagPredicate, firstImportancePredicate));
+        assertFalse(findFirstCommand.equals(new FindCommand(differentArr)));
 
-    @Test
-    public void execute_zeroKeywords_noQuestionFound() {
-        String expectedMessage = String.format(MESSAGE_QUESTIONS_LISTED_OVERVIEW, 0);
-        ArrayList<Predicate<Question>> arr = new ArrayList<>();
-        NameContainsKeywordsPredicate predicate = prepareNamePredicate(" ");
-        arr.add(predicate);
-        FindCommand command = new FindCommand(arr);
-        expectedModel.updateFilteredQuestionList(predicate);
-        assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Collections.emptyList(), model.getFilteredQuestionList());
-        assertEquals(model.getPanel(), QUESTION_KEYWORD);
+        // different tag predicate -> returns false
+        differentArr.clear();
+        differentArr.addAll(List.of(firstNamePredicate, secondTagPredicate, firstImportancePredicate));
+        assertFalse(findFirstCommand.equals(new FindCommand(differentArr)));
+
+        // different importance predicate -> returns false
+        differentArr.clear();
+        differentArr.addAll(List.of(firstNamePredicate, firstTagPredicate, secondImportancePredicate));
+        assertFalse(findFirstCommand.equals(new FindCommand(differentArr)));
     }
 
     @Test
     public void execute_multipleKeywords_oneQuestionFound() {
         String expectedMessage = String.format(MESSAGE_QUESTIONS_LISTED_OVERVIEW, 1);
-        NameContainsKeywordsPredicate predicate = prepareNamePredicate("Fiona Kunz");
-        ArrayList<Predicate<Question>> arr = new ArrayList<>();
-        arr.add(predicate);
-        FindCommand command = new FindCommand(arr);
+        NameContainsKeywordsPredicate predicate = prepareNamePredicate("grey-box test approaches");
+        ArrayList<Predicate<Question>> predicateArr = new ArrayList<>();
+        predicateArr.add(predicate);
+        FindCommand command = new FindCommand(predicateArr);
         expectedModel.updateFilteredQuestionList(predicate);
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(FIONA), model.getFilteredQuestionList());
+        assertEquals(Arrays.asList(getSampleQuestions()[TFQ_QUESTION_INDEX]), model.getFilteredQuestionList());
         assertEquals(model.getPanel(), QUESTION_KEYWORD);
     }
 
     @Test
-    public void find_wrongPanel() {
-        ModelStub model = new FindCommandTest.ModelStub();
-        FindCommand command = new FindCommand(new ArrayList<Predicate<Question>>());
-        assertThrows(CommandException.class,
-                Messages.MESSAGE_NOT_IN_QUESTION_PANEL, () -> command.execute(model));
+    public void execute_multipleKeywordsNotAllMatch_noQuestionFound() {
+        String expectedMessage = String.format(MESSAGE_QUESTIONS_LISTED_OVERVIEW, 0);
+        ArrayList<Predicate<Question>> predicateArr = new ArrayList<>();
+        NameContainsKeywordsPredicate predicate =
+                prepareNamePredicate("grey-box test approaches word-that-does-not-exist");
+        predicateArr.add(predicate);
+        FindCommand command = new FindCommand(predicateArr);
+        expectedModel.updateFilteredQuestionList(predicate);
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(Collections.emptyList(), model.getFilteredQuestionList());
+    }
+
+    @Test
+    public void execute_multipleTagsOnlyOneMatches_fourQuestionsFound() {
+        String expectedMessage = String.format(MESSAGE_QUESTIONS_LISTED_OVERVIEW, 4);
+        ArrayList<Predicate<Question>> predicateArr = new ArrayList<>();
+        TagsContainKeywordsPredicate predicate = new TagsContainKeywordsPredicate(List.of("CS2103T", "RandomTag"));
+        predicateArr.add(predicate);
+        FindCommand command = new FindCommand(predicateArr);
+        expectedModel.updateFilteredQuestionList(predicate);
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        Question[] questions = getSampleQuestions();
+        assertEquals(Arrays.asList(questions[0], questions[1], questions[4], questions[6]),
+                model.getFilteredQuestionList());
+    }
+
+    @Test
+    public void execute_wordWithPunctuationMarkMatch_oneQuestionFound() {
+        String expectedMessage = String.format(MESSAGE_QUESTIONS_LISTED_OVERVIEW, 1);
+        NameContainsKeywordsPredicate predicate = prepareNamePredicate("standard");
+        ArrayList<Predicate<Question>> predicateArr = new ArrayList<>();
+        predicateArr.add(predicate);
+        FindCommand command = new FindCommand(predicateArr);
+        expectedModel.updateFilteredQuestionList(predicate);
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        // question contains "standard?" where "standard" should be taken as a full word match
+        assertEquals(Arrays.asList(getSampleQuestions()[MCQ_QUESTION_INDEX]), model.getFilteredQuestionList());
+    }
+
+    @Test
+    public void execute_multiplePredicates_oneQuestionFound() {
+        String expectedMessage = String.format(MESSAGE_QUESTIONS_LISTED_OVERVIEW, 1);
+        NameContainsKeywordsPredicate namePredicate = prepareNamePredicate("standard is");
+        TagsContainKeywordsPredicate tagPredicate = new TagsContainKeywordsPredicate(List.of("CS2103T", "Java"));
+        HasImportancePredicate importancePredicate = new HasImportancePredicate(new Importance("2"));
+        ArrayList<Predicate<Question>> predicateArr = new ArrayList<>();
+        predicateArr.addAll(List.of(namePredicate, tagPredicate, importancePredicate));
+        FindCommand command = new FindCommand(predicateArr);
+        expectedModel.updateFilteredQuestionList(namePredicate);
+        assertCommandSuccess(command, model, expectedMessage, expectedModel);
+        assertEquals(Arrays.asList(getSampleQuestions()[MCQ_QUESTION_INDEX]), model.getFilteredQuestionList());
     }
 
     /**
      * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
      */
     private NameContainsKeywordsPredicate prepareNamePredicate(String userInput) {
-        return new NameContainsKeywordsPredicate(Arrays.asList(userInput.split("\\s+")));
+        return new NameContainsKeywordsPredicate(Arrays.asList(userInput.trim()
+                .split("([,.?!:;*\"()\\[\\]{}]|\\s)+")));
     }
 
 
